--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,4 +12,5 @@
 
 - name: include distro specific tasks
   include: "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
-  when: ( sudoers or sudoers_d ) is defined
+  when: ( sudoers is defined ) or
+        ( sudoers_d is defined )
