--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,15 +2,9 @@
 - name: check for supported operating system on target
   fail:
     msg: "the operating system of the target machine ({{ inventory_hostname }}) is not currently supported."
-  when: ( ansible_distribution != "Ubuntu" and ansible_distribution_major_version not in [14, 16, 18] )
-
-
-# Optional use if needed
-# - name: include distro specific variables
-#   include_vars: "{{ ansible_os_family }}-{{ ansible_distribution_major_version }}.yml"
-
+  when: ( ansible_distribution|lower != "ubuntu" )
 
 - name: include distro specific tasks
-  include_tasks: "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
+  include_tasks: "{{ ansible_distribution|lower }}.yml"
   when: ( sudoers is defined ) or
         ( sudoers_d is defined )
