--- a/tasks/ubuntu.yml
+++ b/tasks/ubuntu.yml
@@ -1,10 +1,10 @@
 ---
-- name: Ubuntu 14 | display the sudoers src file
+- name: Ubuntu | display the sudoers src file
   debug:
    msg='{{ sudoers | default("sudoers variable not defined") }}'
 
 
-- name: Ubuntu 14 | copy the main sudoers file to /etc/sudoers
+- name: Ubuntu | copy the main sudoers file to /etc/sudoers
   template:
    src={{ sudoers }}
    dest=/etc/sudoers
@@ -15,12 +15,12 @@
   when: sudoers is defined
 
 
-- name: Ubuntu 14 | display the source of sudoers.d directory
+- name: Ubuntu | display the source of sudoers.d directory
   debug:
    msg='{{ sudoers_d | default("sudoers_d variable not defined") }}'
 
 
-- name: Ubuntu 14 | copy additional configs to sudoers.d
+- name: Ubuntu | copy additional configs to sudoers.d
   template:
    src={{ item }}
    dest=/etc/sudoers.d/{{ item | basename }}
